chore: sync obsidian public notes

--- a/content/posts/注解在体系中存在的位置.md
+++ b/content/posts/注解在体系中存在的位置.md
@@ -47,7 +47,7 @@ public @interface MyAnno {
 对你来说，注解就是：
 
 - 跟着类/方法/字段/参数/类型一起写的**“标签 + 配置”**
-- 语法上跟 @Something(...) 这种形式出现
+- 语法上跟 `@Something(...)` 这种形式出现
 - **本身不干任何事情**，只是“写在那儿”
 
 **它什么时候“有用”？**
@@ -87,7 +87,7 @@ public @interface MyAnno {
 
 当你在代码里写：
 
-```
+```java
 Class<?> clazz = User.class;
 MyAnno anno = clazz.getAnnotation(MyAnno.class);
 ```
@@ -101,8 +101,8 @@ MyAnno anno = clazz.getAnnotation(MyAnno.class);
 
 也就是说：
 
-- **注解类型本身**：是一个接口（public @interface MyAnno 编译成 interface MyAnno extends Annotation）
-- **你在类上写的那一坨** **@MyAnno(...)** **使用**：本身不是堆里的对象，只是一份“元数据记录”
+- **注解类型本身**：是一个接口（`public @interface MyAnno` 编译成 `interface MyAnno extends Annotation`）
+- **你在类上写的那一坨** **`@MyAnno(...)`** **使用**：本身不是堆里的对象，只是一份“元数据记录”
 - 只有你**通过反射去拿**时，JVM 才“临时 new”一个代理对象给你用
 
 ## **二、在你的那套“对象 / Class / 类元数据 / 类加载”图谱里，注解该放在哪一层？**
@@ -149,7 +149,7 @@ MyAnno anno = clazz.getAnnotation(MyAnno.class);
 
 > 同理，Class/Method/Field 这些反射对象也可以访问类元数据里的“注解信息”：
 
-- > clazz.getAnnotation(...)、method.getAnnotations()、field.getAnnotations()
+- > `clazz.getAnnotation(...)`、`method.getAnnotations()`、`field.getAnnotations()`
 
 - > 这些方法会把类元数据里的注解记录解析出来，并用动态代理包装成“注解接口”的实现对象
 
@@ -173,7 +173,7 @@ getAnnotations() 从“注解信息”那一块读数据，返回注解接口的
 
 1. 加载：读字节码，创建类元数据，准备 Class 对象
 2. 链接：准备静态字段，默认值
-3. 初始化：执行 <clinit>，赋静态字段 
+3. 初始化：执行 `<clinit>`，赋静态字段 
 
 你可以在“加载”阶段的描述里加一句：
 
@@ -191,7 +191,7 @@ getAnnotations() 从“注解信息”那一块读数据，返回注解接口的
 
 这是“注解要活到哪一层”的声明：
 
-```
+```java
 @Retention(RetentionPolicy.SOURCE)
 @interface A { }
 
@@ -216,17 +216,17 @@ getAnnotations() 从“注解信息”那一块读数据，返回注解接口的
 结合你的那张图：
 
 - SOURCE：停在**编译器视角**，还没进入你图里的任何一层
-- CLASS：进入**类元数据**了，但 Class.getAnnotation() 不会管它
+- CLASS：进入**类元数据**了，但 `Class.getAnnotation()` 不会管它
 - RUNTIME：进入**类元数据**，并且**反射 API 也会把它暴露出来**
 
 ### **2. “注解本身是不是对象？存堆里吗？”**
 
 要分清：
 
-1. **注解类型本身**（@interface MyAnno）：
+1. **注解类型本身**（`@interface MyAnno`）：
 
-   - 编译成 interface MyAnno extends java.lang.annotation.Annotation
-   - 它跟普通接口一样，有自己的 Class<MyAnno> 对象，在堆里
+   - 编译成 `interface MyAnno extends java.lang.annotation.Annotation`
+   - 它跟普通接口一样，有自己的 `Class<MyAnno>` 对象，在堆里
 
 2. **你写在类/方法上的“那个注解使用实例”**：
 
